Fixed a minor style issue in which the legend text in the map was unreadable due to recent changes in color.

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -255,10 +255,6 @@
                 opacity: .8;
                 padding: 3px;
                 display: block;
-
-                .legend-text {
-                    color: inherit;
-                }
             }
         }
 
